# fork-Mic-1

./: CMakeLists.txt  README.md  mic1
resultados/: log_execucao.txt
src/: Etapas.txt  Mic1.cpp
src/auxiliarFunctions/: functions.cpp  functions.hpp
src/lexer/: lexer.cpp  lexer.hpp  main.cpp
src/memory/: instrucoes.txt  memory_Data.txt  memory_Instructions.txt  registradores.txt
src/reg/: register.cpp  register.hpp
src/ula/: ULA.cpp  ULA.hpp
tests/: programa_etapa2_tarefa2.txt
tests_n_ideias/: ULA.cpp  register.cpp  ula.cpp  ula.hpp
